@@ -43,6 +43,8 @@ Avro 1.3.1 (16 March 2010)
 
     AVRO-454. Change DataFileStream to implement Closeable. (cutting)
 
+    AVRO-449. CMake-based build system for Avro/C (Bruce Mitchener via massie)
+
   BUG FIXES
 
     AVRO-424. Fix the specification of the deflate codec.
